plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'org.jetbrains.kotlin.jvm'
}

group = 'com.diecast'
version = '0.0.1-SNAPSHOT'
description = 'Catalog for diecast miniatures'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // PostgreSQL and Google Cloud SQL
    implementation 'org.postgresql:postgresql:42.7.7'
    //exclusivo para o GCP
    //implementation 'com.google.cloud.sql:postgres-socket-factory:1.25.2'

    //Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JWT dependencies
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Spring WebFlux for reactive programming
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Spring AMQP for RabbitMQ
    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'com.rabbitmq:amqp-client:5.26.0'

    // LangChain4j Core
    //implementation 'dev.langchain4j:langchain4j:1.4.0'

    // LangChain4j OpenAI
    //implementation 'dev.langchain4j:langchain4j-open-ai:1.4.0'

    //implementation 'org.springframework.ai:spring-ai-starter-model-openai:1.0.2'

    //implementation 'org.springframework.ai:spring-ai-starter-model-azure-openai'

    //implementation 'org.springframework.ai:spring-ai-azure-openai-spring-boot-starter:1.0.0-M6'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"

    // Source: https://mvnrepository.com/artifact/org.flywaydb/flyway-gradle-plugin
    runtimeOnly 'org.flywaydb:flyway-gradle-plugin:11.20.2'
    implementation 'org.flywaydb:flyway-core:10.15.0'
    implementation 'org.flywaydb:flyway-database-postgresql:10.15.0'



}

tasks.named('test') {
	useJUnitPlatform()
}
